--- a/backNotify/src/resources/mail/auth/sensorAlert.html
+++ b/backNotify/src/resources/mail/auth/sensorAlert.html
@@ -79,7 +79,7 @@
     <div class="Container-Mail">
       <div class="Container-Content">
         <h1>SENSOR {{cond}} DE {{value}}</h1>
-        <p>O sensor <b>{{sensorName}}</b> está {{cond}} de {{value}}</p>
+        <p>O sensor <b>{{sensorName}}</b> está {{cond}} de {{value}}{{unit}}</p>
         <br />
         <table>
           <tr>
