--- a/backNotify/src/resources/mail/auth/sensorAlert.html
+++ b/backNotify/src/resources/mail/auth/sensorAlert.html
@@ -78,7 +78,7 @@
   <body>
     <div class="Container-Mail">
       <div class="Container-Content">
-        <h1>SENSOR {{cond}} DE {{value}}</h1>
+        <h1>SENSOR {{cond}} DE {{value}}{{unit}}</h1>
         <p>O sensor <b>{{sensorName}}</b> está {{cond}} de {{value}}{{unit}}</p>
         <br />
         <table>
