--- a/backNotify/src/resources/mail/auth/sensorAlert.html
+++ b/backNotify/src/resources/mail/auth/sensorAlert.html
@@ -79,6 +79,7 @@
     <div class="Container-Mail">
       <div class="Container-Content">
         <h1>SENSOR {{cond}} DE {{value}}{{unit}}</h1>
+        <p>Valor do sensor: {{VALUE_JSON}}{{unit}}</p>
         <p>O sensor <b>{{sensorName}}</b> está {{cond}} de {{value}}{{unit}}</p>
         <br />
         <table>
