--- a/backNotify/src/resources/mail/auth/sensorAlert.html
+++ b/backNotify/src/resources/mail/auth/sensorAlert.html
@@ -80,7 +80,7 @@
       <div class="Container-Content">
         <h1>SENSOR {{cond}} DE {{value}}{{unit}}</h1>
         <p>Valor do sensor: {{VALUE_JSON}}{{unit}}</p>
-        <p>O sensor <b>{{sensorName}}</b> está {{cond}} de {{value}}{{unit}}</p>
+        <p>O sensor <b>{{sensorName}}</b> está {{cond}} de {{value}}{{unit}} - {{medition_type}}</p>
         <br />
         <table>
           <tr>
