Ajustes no nodemailer

--- a/backNotify/src/resources/mail/auth/sensorAlert.html
+++ b/backNotify/src/resources/mail/auth/sensorAlert.html
@@ -84,8 +84,8 @@
         <br />
         <table>
           <tr>
-            <th>Primeiro Registro</th>
-            <th>Último resgistro</th>
+            <th>Primeiro registro</th>
+            <th>Último registro</th>
           </tr>
           <tr>
             <td>{{start}}</td>
